logs/tundra.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tundra'...
Listing './lib/python3.5/site-packages/tundra/algorithm'...
Compiling './lib/python3.5/site-packages/tundra/algorithm/misc.py'...
***   File "./lib/python3.5/site-packages/tundra/algorithm/misc.py", line 25
    colors: Dict[Vertex, int] = {}
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tundra/algorithm/path.py'...
***   File "./lib/python3.5/site-packages/tundra/algorithm/path.py", line 22
    previous: Dict[Vertex, Optional[Vertex]]
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tundra/algorithm/search.py'...
***   File "./lib/python3.5/site-packages/tundra/algorithm/search.py", line 36
    deq: Deque[Vertex] = deque()
       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tundra/algorithm/spanning_tree.py'...
***   File "./lib/python3.5/site-packages/tundra/algorithm/spanning_tree.py", line 14
    cost: Dict[Vertex, float] = {v: inf for v in g.vertices}
        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tundra/core'...
Compiling './lib/python3.5/site-packages/tundra/core/digraph.py'...
***   File "./lib/python3.5/site-packages/tundra/core/digraph.py", line 30
    f'{v1} and {v2} are not neighbors'
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tundra/core/graph.py'...
***   File "./lib/python3.5/site-packages/tundra/core/graph.py", line 17
    self.weight: Weight = Weight(self._vertices, True)
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tundra/factory.py'...
***   File "./lib/python3.5/site-packages/tundra/factory.py", line 50
    f'got: len(iter_or_int1) = {len(vertices1)} and '
    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tundra/util.py'...
***   File "./lib/python3.5/site-packages/tundra/util.py", line 40
    opts.append(f'label="{str(w)}"')
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tundra-0.2.2.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
